# math

./: CMakeLists.txt  README.md  mathConfig.cmake.in
src/: constants.h  mat2.h  mat3.h  mat4.h  math.h  normal3.h  orthonormal.h  point3.h  quat.h  ray.h  types.h  vec2.h  vec3.h  vec4.h
test/: CMakeLists.txt  mat2_test.cpp  mat3_test.cpp  mat4_test.cpp  point3_test.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp
